--- a/src/main/webapp/WEB-INF/jsp/include/footer.jspf
+++ b/src/main/webapp/WEB-INF/jsp/include/footer.jspf
@@ -4,8 +4,8 @@
 					<!-- #section:basics/footer -->
 					<div class="footer-content">
 						<span class="bigger-120">
-							<span class="blue bolder">北京中科软件有限公司</span>
-							项目管理系统 2014-2015
+							<span class="blue bolder">电力电子技术研究所</span>
+							设备资源管理系统 2016-2021
 						</span>
 
 						&nbsp; &nbsp;
