--- a/src/main/webapp/WEB-INF/jsp/include/menu.jspf
+++ b/src/main/webapp/WEB-INF/jsp/include/menu.jspf
@@ -1,19 +1,13 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
 <!-- Collect the nav links, forms, and other content for toggling -->
 				<ul class="nav nav-list">
-					<li class="active">
-						<a href="index.html">
-							<i class="menu-icon fa fa-tachometer"></i>
-							<span class="menu-text"> 档案提醒 </span>
-						</a>
-
-						<b class="arrow"></b>
-					</li>
 				
-					<li class="">
+					<li class="active open hsub">
 						<a href="#" class="dropdown-toggle">
 							<i class="menu-icon fa fa-list"></i>
-							<span class="menu-text"> 归档管理 </span>
+							<span class="menu-text"> 资源管理
+							<span class="badge badge-primary">2</span>
+							</span>
 
 							<b class="arrow fa fa-angle-down"></b>
 						</a>
@@ -22,176 +16,29 @@
 						
 						<ul class="submenu">
 
-							<li class="">
-								<a href="/demo">
+							<li class="active">
+								<a href="/stock/register">
 									<i class="menu-icon fa fa-caret-right"></i>
-									归档确认
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-						</ul>
-					</li>
-					
-										<li class="">
-						<a href="#" class="dropdown-toggle">
-							<i class="menu-icon fa fa-tag"></i>
-							<span class="menu-text">								
-								档案维护																
-								<span class="badge badge-primary">3</span>
-							
-							</span>
-
-							<b class="arrow fa fa-angle-down"></b>
-						</a>
-
-						<b class="arrow"></b>
-
-						<ul class="submenu">
-							<li class="">
-								<a href="profile.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									科技档案维护
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="inbox.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									文书档案维护
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="pricing.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									实物档案维护
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-						</ul>
-					</li>
-
-					<li class="">
-						<a href="#" class="dropdown-toggle">
-							<i class="menu-icon fa fa-pencil-square-o"></i>
-							<span class="menu-text">档案借阅
-							<span class="badge badge-primary">2</span>
-							</span>
-
-							<b class="arrow fa fa-angle-down"></b>
-						</a>
-
-						<b class="arrow"></b>
-
-						<ul class="submenu">
-							<li class="">
-								<a href="form-elements.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									借阅申请
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="form-wizard.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									已借单据
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-						</ul>
-					</li>
-					
-										<li class="">
-						<a href="#" class="dropdown-toggle">
-							<i class="menu-icon fa fa-list"></i>
-							<span class="menu-text">出入库
-							<span class="badge badge-primary">2</span>
-							</span>
-
-							<b class="arrow fa fa-angle-down"></b>
-						</a>
-
-						<b class="arrow"></b>
-
-						<ul class="submenu">
-							<li class="">
-								<a href="tables.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									档案出库
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="jqgrid.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									档案入库
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-						</ul>
-					</li>
-					
-					<li class="">
-						<a href="#" class="dropdown-toggle">
-							<i class="menu-icon fa fa-pencil-square-o"></i>
-							<span class="menu-text">
-							统计查询
-							<span class="badge badge-primary">3</span>
-							</span>
-
-							<b class="arrow fa fa-angle-down"></b>
-						</a>
-
-						<b class="arrow"></b>
-
-						<ul class="submenu">
-							<li class="">
-								<a href="form-elements.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									借阅申请
-								</a>
-
-								<b class="arrow"></b>
-							</li>
-
-							<li class="">
-								<a href="form-wizard.html">
-									<i class="menu-icon fa fa-caret-right"></i>
-									已借单据
+									资产登记
 								</a>
 
 								<b class="arrow"></b>
 							</li>
 							
 							<li class="">
-								<a href="form-wizard.html">
+								<a href="/stock/search">
 									<i class="menu-icon fa fa-caret-right"></i>
-									档案利用
+									资产检索
 								</a>
 
 								<b class="arrow"></b>
 							</li>
-
 						</ul>
 					</li>
-
+					
 					<li class="">
 						<a href="#" class="dropdown-toggle">
-							<i class="menu-icon fa fa-file-o"></i>
+							<i class="menu-icon fa fa-cogs"></i>
 
 							<span class="menu-text">
 								系统管理
@@ -209,7 +56,7 @@
 
 						<ul class="submenu">
 							<li class="">
-								<a href="faq.html">
+								<a href="/stock/user">
 									<i class="menu-icon fa fa-caret-right"></i>
 									用户管理
 								</a>
@@ -218,7 +65,7 @@
 							</li>
 
 							<li class="">
-								<a href="error-404.html">
+								<a href="/stock/permission">
 									<i class="menu-icon fa fa-caret-right"></i>
 									权限分配
 								</a>
@@ -227,7 +74,7 @@
 							</li>
 
 							<li class="">
-								<a href="error-500.html">
+								<a href="/stock/base">
 									<i class="menu-icon fa fa-caret-right"></i>
 									基表维护
 								</a>
