更新资源文件
更新资源文件

--- a/src/main/webapp/WEB-INF/jsp/include/header.jspf
+++ b/src/main/webapp/WEB-INF/jsp/include/header.jspf
@@ -23,8 +23,6 @@
 		<link rel="stylesheet" href="../assets/css/ace-skins.min.css" />
 		<link rel="stylesheet" href="../assets/css/ace-rtl.min.css" />
 		
-		<link rel="stylesheet" href="/resources/css/cl.css" />
-		
 		<!--[if lte IE 9]>
 		  <link rel="stylesheet" href="../assets/css/ace-ie.min.css" />
 		<![endif]-->
@@ -39,8 +37,8 @@
 		<script src="../assets/js/respond.min.js"></script>
 		<![endif]-->
 		
-		<script type="text/javascript" src="/resources/js/angular.min.js"></script>
-    	<script type="text/javascript" src="/resources/js/angular-resource.min.js"></script>
+		<script type="text/javascript" src="../assets/js/angular.min.js"></script>
+    	<script type="text/javascript" src="../assets/js/angular-resource.min.js"></script>
 		
 	</head>
 	<c:choose>
@@ -71,7 +69,6 @@
 					<!-- #section:basics/navbar.layout.brand -->
 					<a href="#" class="navbar-brand">
 						<small>
-							<img src="/resources/img/project_red_24_24.png"></img>
 							设备资源管理系统
 						</small>
 					</a>
