--- a/src/main/webapp/WEB-INF/jsp/include/menu.jspf
+++ b/src/main/webapp/WEB-INF/jsp/include/menu.jspf
@@ -15,6 +15,14 @@
 						<b class="arrow"></b>
 						
 						<ul class="submenu">
+							<li class="active">
+								<a href="/stock/register">
+									<i class="menu-icon fa fa-caret-right"></i>
+									资产导入
+								</a>
+
+								<b class="arrow"></b>
+							</li>
 
 							<li class="active">
 								<a href="/stock/register">
@@ -25,14 +33,52 @@
 								<b class="arrow"></b>
 							</li>
 							
-							<li class="">
-								<a href="/stock/search">
+							<li class="active">
+								<a href="/stock/register">
 									<i class="menu-icon fa fa-caret-right"></i>
-									资产检索
+									资产入库
 								</a>
 
 								<b class="arrow"></b>
 							</li>
+							
+							<li class="">
+								<a href="/stock/search">
+									<i class="menu-icon fa fa-caret-right"></i>
+									资产出库
+								</a>
+
+								<b class="arrow"></b>
+							</li>
+
+							<li class="">
+								<a href="/stock/search">
+									<i class="menu-icon fa fa-caret-right"></i>
+									资产再入库
+								</a>
+
+								<b class="arrow"></b>
+							</li>
+
+							
+							<li class="">
+								<a href="/stock/search">
+									<i class="menu-icon fa fa-caret-right"></i>
+									资产查询
+								</a>
+
+								<b class="arrow"></b>
+							</li>
+							
+							<li class="">
+								<a href="/stock/search">
+									<i class="menu-icon fa fa-caret-right"></i>
+									资产统计
+								</a>
+
+								<b class="arrow"></b>
+							</li>
+																					
 						</ul>
 					</li>
 					
