更新网页内容
更新网页内容

--- a/src/main/webapp/WEB-INF/jsp/include/footer.jspf
+++ b/src/main/webapp/WEB-INF/jsp/include/footer.jspf
@@ -4,7 +4,7 @@
 					<!-- #section:basics/footer -->
 					<div class="footer-content">
 						<span class="bigger-120">
-							<span class="blue bolder">电力电子技术研究所</span>
+							<span class="blue bolder">舰船综合电力技术国防科技重点实验室</span>
 							设备资源管理系统 2016-2021
 						</span>
 
